crates/ars-forms/src/field/snapshots/ars_forms__field__component__tests__field_error_message_hidden.snap
---
source: crates/ars-forms/src/field/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).error_message_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Hidden,
            Bool(
                true,
            ),
        ),
        (
            Id,
            String(
                "email-error-message",
            ),
        ),
        (
            Role,
            String(
                "alert",
            ),
        ),
    ],
    styles: [],
}
