crates/ars-forms/src/field/snapshots/ars_forms__field__component__tests__field_input_default.snap
---
source: crates/ars-forms/src/field/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "email-label",
            ),
        ),
        (
            Id,
            String(
                "email-input",
            ),
        ),
    ],
    styles: [],
}
