crates/ars-forms/src/field/snapshots/ars_forms__field__component__tests__field_input_disabled_readonly_validating.snap
---
source: crates/ars-forms/src/field/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "email-label",
            ),
        ),
        (
            Aria(
                ReadOnly,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "email-input",
            ),
        ),
    ],
    styles: [],
}
