crates/ars-forms/src/field/snapshots/ars_forms__field__component__tests__field_input_required.snap
---
source: crates/ars-forms/src/field/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "email-label",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "email-input",
            ),
        ),
    ],
    styles: [],
}
