crates/ars-forms/src/field/snapshots/ars_forms__field__component__tests__field_label_default.snap
---
source: crates/ars-forms/src/field/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).label_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Id,
            String(
                "email-label",
            ),
        ),
        (
            For,
            String(
                "email-input",
            ),
        ),
    ],
    styles: [],
}
