crates/ars-forms/src/field/snapshots/ars_forms__field__component__tests__field_root_default.snap
---
source: crates/ars-forms/src/field/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Id,
            String(
                "email",
            ),
        ),
    ],
    styles: [],
}
